--- a/Capstone.html
+++ b/Capstone.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="Capstone.css">
 </head>
 <body>
-    <header>
+     <header>
         <div class="logo">FUTURA</div>
         <nav class="##">
             <a href="#">HOME</a>
@@ -22,58 +22,61 @@
             <a href="#">CONTACT</a>
         </nav>
     </header>
+    <div class="class">
     <section class="container">
         <section class="hero">
             <h1>WELCOME TO THE FUTURE</h1>
-            <img src="Image-1.png">
+            <img src="images/Image-1.png">
         </section>
+    </section>
         <div class="container2">
             <div class="g1">
-             <img src="Grid1.png">
+             <img src="images/Grid1.png">
              <p class="grid-project">Project Alpha</p>
              <p class ="grid-design">Web Design</p>
             </div>
             <div class="g2">
-             <img src="Grid2.png">
+             <img src="images/Grid2.png">
              <p class="grid-project">Project Beta</p>
              <p class ="grid-design">App Development</p>
             </div>
             <div class="g3">
-             <img src="Grid3.png">
+             <img src="images/Grid3.png">
              <p class="grid-project">Project Gamma</p>
              <p class ="grid-design">Branding</p>
             </div>
             <div class="g4">
-                <img src="G4.png">
+                <img src="images/G4.png">
                 <p class="grid-project">Project Delta</p>
                 <p class ="grid-design">UI/UX Design</p>
             </div>
             <div class="g5">
-                <img src="G5.png">
+                <img src="images/G5.png">
                 <p class="grid-project">Project Epsilon</p>
                 <p class ="grid-design">E-commerce</p>
             </div>
             <div class="g6">
-                <img src="G6.png">
+                <img src="images/G6.png">
                 <p class="grid-project">Project Zeta</p>
                 <p class ="grid-design">SEO</p>
             </div>
             <div class="g7">
-                <img src="G7.png">
+                <img src="images/G7.png">
                 <p class="grid-project">Project Eta</p>
                 <p class ="grid-design">Marketing</p>
             </div>
             <div class="g8">
-                <img src="G8.png">
+                <img src="images/G8.png">
                 <p class="grid-project">Project Theta</p>
                 <p class ="grid-design">Content Creation</p>
             </div>
             <div class="g9">
-                <img src="G9.png">
+                <img src="images/G9.png">
                 <p class="grid-project">Project Iota</p>
                 <p class ="grid-design">Consulting</p>
             </div>
         </div>
+        
         <section class="portfolio">
             <p>I  AM  A  FUTURISTIC  DESIGNER  WITH  A  PASSION  FOR   MINIMALISM  AND CUTTING-EDGE  TECHNOLOGY.</p>
         </section>
@@ -83,11 +86,11 @@
             simplicity. I believe in the power of clean
             lines and geometric shapes to create visually
             stunning and efficient user experiences.</p>
-            </section>
+        </section>
         <section class="three">
-            <img src="A.png">
-            <img src="B.png">
-            <img src="C.png">
+            <img src="images/A.png">
+            <img src="images/B.png">
+            <img src="images/C.png">
         </section>
         <section class="services">
             <div class="offer">
@@ -139,23 +142,23 @@
             <section class="five-image">
                 <div class="five1">
                   <div class="im1">
-                    <img src="f1.png">
+                    <img src="images/f1.png">
                   </div>
                   <div class="im2">
-                    <img src="f2.png">
+                    <img src="images/f2.png">
                   </div>
                 </div>
                 <div class="five2">
                     <div class="im3">
-                        <img src="f3.png">
+                        <img src="images/f3.png">
                     </div>
                 </div>
                 <div class="five3">
                     <div class="im4">
-                        <img src="f5.png">
+                        <img src="images/f5.png">
                     </div>
                     <div class="im5">
-                        <img src="f4.png">
+                        <img src="images/f4.png">
                     </div>
                 </div>
             </section>
@@ -180,11 +183,13 @@
                 </div>
             </section>
     </section>
+    </div>
     <footer>
         <nav class="footer">
             <a href="fff">© 2023 Futura</a>   
         </nav>
         <button>Contact Me </button>
     </footer>
+    
 </body>
 </html>
